--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://www.paypal.com/sdk/js?client-id=AeHwcmfQw6Ild3i7xTlFR0hBIDkQFcHAG0Bo_2bMSU6GNS-ztGtQ_-kxhfJuUrEtiReVS0ONs55ZUh8-&currency=CAD"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
