replaced hard-coded config variables with environment variables and deleted fireBaseConfig.js

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <script
-    src="https://www.paypal.com/sdk/js?client-id=AeHwcmfQw6Ild3i7xTlFR0hBIDkQFcHAG0Bo_2bMSU6GNS-ztGtQ_-kxhfJuUrEtiReVS0ONs55ZUh8-&currency=CAD"></script>
+    src="https://www.paypal.com/sdk/js?client-id=%REACT_APP_PAYPAL_CLIENT_ID%"></script>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
