--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <script
     src="https://www.paypal.com/sdk/js?client-id=%REACT_APP_PAYPAL_CLIENT_ID%"></script>
-  <title>React App</title>
+  <title>Iverson Club</title>
 </head>
 
 <body>
